lab1/Test/L1-A-6-5.output
Error Type B at Line 1
Error Type A at Line 2
Error Type B at Line 5
Error Type B at Line 6
Error Type B at Line 9
Error Type B at Line 12
Error Type B at Line 13
Error Type B at Line 16
Error Type A at Line 16
Error Type A at Line 16
