lab1/Test/L1-A-6-5.cmm
int UePWfKL ( {
  int f6J5GE89gUSSco9qTR #;
  if ( ! ( MfGOYTMsHtqHSz2F0DD ( ) = lEG7eTo5 ) = 
    ! KHZS79A + QGcAMpq1vKS3u + Ip1Awr_KUDnTnzCvo + Qt 
    + == sBKBGAsNjC != NZjaoxMjLUxMcN9NrRVp )   return 
    ;

}
int ( ) {
  - SJ9L ( ! pGU = vm0W3GiJb3JKaE , Q_U_NY ) = - iYcJh5COc 
    ( s ) . vUVK5TYeULNFbEU = baYJWC1qTnQ52zydw45H 
  while ( - s7J4mmk9sQ - ioaNy9cKAWRsFsyB + _QsXf 
    || xDWg4UMf89us || IocJIIAoCcVYHm )   Unrxp ;>= 

}
< #&